<resources>
    <string name="app_name">PetShop</string>
    <string name="action_settings">Settings</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="proximo">Next</string>
    <string name="anterior">Previous</string>
    <string name="labelUsuario">Usuario</string>
    <string name="labelSenha">Password</string>
    <string name="botaoLogar">Login</string>
    <string name="hintNomeCao">Dog name</string>
    <string name="hintNomeDono">Owner name</string>
    <string name="hintEndereco">Address</string>
    <string name="botaoSalvar">Save</string>
    <string name="hintIdadeCao">Dog age</string>
    <string name="hintLogin">Type your login</string>
    <string name="hintSenha">Type your password</string>
    <string name="dono">Owner</string>
    <string name="cao">Dog name</string>
    <string name="idade">Dog age</string>
    <string name="endereco">Address</string>
    <string name="txtAtencao">Warning</string>
    <string name="btSair">Exit</string>
    <string name="hintNomeCaoFormulario">Type the dog name</string>
    <string name="hintNomeDonoFormulario">Type the dog owner</string>
    <string name="hintEnderecoFormulario">Type the address</string>
    <string name="idadePetLabelFormulario">Dog age </string>
    <string name="hintSpinnerFormulario">Select</string>
    <string name="erroLogin">Wrong user or password</string>
    <string name="btnTentarNovamente">Try again</string>

    <string-array name="arrayIdadeCao">
        <item>Select...</item>
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
    </string-array>

</resources>