<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="#FF5722"
    android:padding="1dp"
    android:id="@+id/llFundoLista"
    android:layout_width="match_parent"
    android:layout_height="160dp">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="110dp"
        android:src="@mipmap/ic_launcher" />

    <LinearLayout
        android:layout_width="140dp"
        android:layout_height="130dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="135dp"
            android:layout_height="28dp"
            android:layout_marginTop="5dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textAlignment="viewEnd"
            android:text="@string/cao"
            android:textSize="20dp">
        </TextView>
        <TextView
            android:layout_width="135dp"
            android:layout_height="28dp"
            android:layout_marginTop="1dp"
            android:textAlignment="viewEnd"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="20dp"
            android:text="@string/idade">
        </TextView>
        <TextView
            android:layout_width="135dp"
            android:layout_height="28dp"
            android:layout_marginTop="1dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="20dp"
            android:textAlignment="viewEnd"
            android:text="@string/dono">
        </TextView>

        <TextView
            android:layout_width="135dp"
            android:layout_height="28dp"
            android:layout_marginTop="1dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="20dp"
            android:textAlignment="viewEnd"
            android:text="@string/endereco">
        </TextView>


        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginTop="2dp"
        android:layout_marginStart="9dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvListaNomeCao"
            android:layout_width="144dp"
            android:layout_height="wrap_content"
            android:text="@string/hintNomeCao"
            android:textStyle="bold"
            android:textColor="#051EAA"
            android:textSize="20dp" />
        <TextView
            android:id="@+id/tvListaIdadeCao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:textStyle="bold"
            android:textColor="#051EAA"
            android:text="@string/hintIdadeCao"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/tvListaNomeDono"
            android:layout_width="142dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:text="@string/hintNomeDono"
            android:textStyle="bold"
            android:textColor="#051EAA"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/tvListaEndereco"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#051EAA"
            android:text="@string/hintEndereco"
            android:textStyle="bold"
            android:layout_marginTop="5dp"
            android:textSize="20dp"/>

    </LinearLayout>
</LinearLayout>