<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FormularioActivity">

    <EditText
        android:id="@+id/etNomeCao"
        android:layout_width="353dp"
        android:layout_height="59dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/hintNomeCaoFormulario"
        android:inputType="textCapSentences"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etNomeDono"
        android:layout_width="353dp"
        android:layout_height="59dp"
        android:ems="10"
        android:hint="@string/hintNomeDonoFormulario"
        android:inputType="textCapSentences"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNomeCao" />

    <EditText
        android:id="@+id/etEndereco"
        android:layout_width="353dp"
        android:layout_height="59dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/hintEnderecoFormulario"
        android:inputType="textCapSentences"
        android:maxLength="14"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNomeDono" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/idadePetLabelFormulario"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.151"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etEndereco" />

    <Spinner
        android:id="@+id/spIdadeCao"
        android:layout_width="141dp"
        android:layout_height="29dp"
        android:layout_marginTop="16dp"
        android:entries="@array/arrayIdadeCao"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.107"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/btnSalvar"
        android:layout_width="165dp"
        android:layout_height="48dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="56dp"
        android:backgroundTint="#00f"
        android:text="@string/botaoSalvar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.539"
        app:layout_constraintStart_toEndOf="@+id/spIdadeCao"
        app:layout_constraintTop_toBottomOf="@+id/etEndereco" />
</androidx.constraintlayout.widget.ConstraintLayout>